--- a/ColumnDesign/UCOutputsView.xaml
+++ b/ColumnDesign/UCOutputsView.xaml
@@ -16,8 +16,8 @@
         <ContentControl x:Key="Calcs">
             <local:UCCalcs/>
         </ContentControl>
-        <ContentControl x:Key="Fire">
-            <local:UCFireDesign DataContext="{Binding MyFireDesignView}"/>
+        <ContentControl x:Key="ProjectView">
+            <local:UCProjectView DataContext="{Binding MyProjectView}"/>
         </ContentControl>
         <ContentControl x:Key="Checks">
             <local:UCChecks/>
@@ -25,6 +25,11 @@
     </UserControl.Resources>
     
     <Grid>
+        <Grid.Resources>
+            <Style TargetType="GridSplitter">
+                <Setter Property="Background" Value="#464e53"/>
+            </Style>
+        </Grid.Resources>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
@@ -43,7 +48,7 @@
                 Grid.Column="0" 
                 Content="{StaticResource Layout}"/>
 
-            <GridSplitter Grid.Column="1" Background="LightGray" HorizontalAlignment="Stretch" Width="2"/>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="2"/>
 
             <ContentControl 
                 Grid.Column="2" 
@@ -51,31 +56,44 @@
 
         </Grid>
 
-        <GridSplitter Grid.Row="1" Background="LightGray" HorizontalAlignment="Stretch" Height="2"/>
+        <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="2"/>
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
-                <!--<ColumnDefinition Width="0*"/>
-                <ColumnDefinition Width="Auto"/>-->
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition >
+                    <ColumnDefinition.Style>
+                        <Style TargetType="ColumnDefinition">
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="false">
+                                    <Setter Property="Width" Value="0"/>
+                                </DataTrigger>
+                                <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="true">
+                                    <Setter Property="Width" Value="*"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ColumnDefinition.Style>
+                </ColumnDefinition>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
             <ContentControl 
                 Grid.Column="0" 
                 Content="{StaticResource Calcs}"/>
 
-            <GridSplitter Grid.Column="1" Background="LightGray" HorizontalAlignment="Stretch" Width="2"/>
-
-            <!--<ContentControl
-                Grid.Column="2"
-                Content="{StaticResource Fire}"/>
-            
-            <GridSplitter Grid.Column="3" Background="LightGray" HorizontalAlignment="Stretch" Width="2"/>-->
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="2"/>
 
             <ContentControl
                 Grid.Column="2"
+                Content="{StaticResource ProjectView}"/>
+            
+            <GridSplitter Grid.Column="3" HorizontalAlignment="Stretch" Width="2"/>
+
+            <ContentControl
+                Grid.Column="4"
                 Content="{StaticResource Checks}"/>
 
         </Grid>
