--- a/ColumnDesign/UCYieldSurface.xaml
+++ b/ColumnDesign/UCYieldSurface.xaml
@@ -17,7 +17,7 @@
         </ContentControl>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
