--- a/ColumnDesign/App.xaml
+++ b/ColumnDesign/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:ColumnDesign"
              Startup="App_StartUp">
     <Application.Resources>
-         
+        <ResourceDictionary >
+            <ResourceDictionary.MergedDictionaries >
+                <ResourceDictionary Source="Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
