--- a/ColumnDesign/UCOutputsView.xaml
+++ b/ColumnDesign/UCOutputsView.xaml
@@ -23,80 +23,93 @@
             <local:UCChecks/>
         </ContentControl>
     </UserControl.Resources>
-    
-    <Grid>
-        <Grid.Resources>
-            <Style TargetType="GridSplitter">
-                <Setter Property="Background" Value="#464e53"/>
-            </Style>
-        </Grid.Resources>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
+    <Border BorderBrush="#b6bdc1" BorderThickness="15">
+        <Grid Background="#b6bdc1">
+            <Grid.Resources>
+                <Style TargetType="GridSplitter">
+                    <Setter Property="Background" Value="#b6bdc1"/>
+                </Style>
+            </Grid.Resources>
 
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-
-            <ContentControl 
-                Grid.Column="0" 
-                Content="{StaticResource Layout}"/>
-
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="2"/>
-
-            <ContentControl 
-                Grid.Column="2" 
-                Content="{StaticResource YieldSurface}"/>
-
-        </Grid>
-
-        <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="2"/>
-
-        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition >
-                    <ColumnDefinition.Style>
-                        <Style TargetType="ColumnDefinition">
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="false">
-                                    <Setter Property="Width" Value="0"/>
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="true">
-                                    <Setter Property="Width" Value="*"/>
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </ColumnDefinition.Style>
-                </ColumnDefinition>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <ContentControl 
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="1*"/>
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Border>
+                        <ContentControl 
                 Grid.Column="0" 
-                Content="{StaticResource Calcs}"/>
+                Content="{StaticResource Layout}"/>
+                    </Border>
 
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="2"/>
+                    <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="20" Margin="-1"/>
 
+                    <Border
+                        Grid.Column="2" >
+                        <ContentControl 
+                            Content="{StaticResource YieldSurface}"/>
+                    </Border>
+                </Grid>
+
+                <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Height="20"  Margin="-1"/>
+
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition >
+                            <ColumnDefinition.Style>
+                                <Style TargetType="ColumnDefinition">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="false">
+                                            <Setter Property="Width" Value="0"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding MyProjectView.DisplayView, Mode=OneWay}" Value="true">
+                                            <Setter Property="Width" Value="*"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </ColumnDefinition.Style>
+                        </ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <ContentControl 
+                        Grid.Column="0" 
+                        Content="{StaticResource Calcs}"/>
+
+                    <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="20" Margin="-1"/>
+
+                    <ContentControl
+                        Padding="25"
+                        Grid.Column="2"
+                        Content="{StaticResource ProjectView}"/>
+
+                </Grid>
+            </Grid>
+
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="20" Margin="-1"/>
+            
             <ContentControl
                 Grid.Column="2"
-                Content="{StaticResource ProjectView}"/>
-            
-            <GridSplitter Grid.Column="3" HorizontalAlignment="Stretch" Width="2"/>
-
-            <ContentControl
-                Grid.Column="4"
                 Content="{StaticResource Checks}"/>
 
         </Grid>
-
-    </Grid>
+    </Border>
+    
 </UserControl>
