--- a/ColumnDesign/UCProjectView.xaml
+++ b/ColumnDesign/UCProjectView.xaml
@@ -7,7 +7,7 @@
              xmlns:h="http://helix-toolkit.org/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid Background="White">
         <TextBlock 
             VerticalAlignment="Top" 
             FontSize="14" 
